# private-pypi-server

./: README.md  docker-compose.yaml  setup.sh
poetry/pkg_p1/: README.md  pyproject.toml
poetry/pkg_p1/p1/: module1.py
poetry/pkg_p2/: README.md  pyproject.toml
poetry/pkg_p2/p2/: module2.py
poetry/pkg_p3/: README.md  pyproject.toml
poetry/pkg_p3/p3/: module3.py
uv/pkg_uv3/: README.md  pyproject.toml
uv/pkg_uv3/uv3/: module3.py
